@@ -1868,7 +1868,7 @@ func_all_modules ()
 
   func_begin_table
   func_module findprog
-  #func_module wait-process
+  func_module wait-process
   #func_module execute
   #func_module pipe
   #func_module sh-quote
