@@ -1,3 +1,8 @@
+2003-10-20  Bruno Haible  <bruno@clisp.org>
+
+	* wait-process.h: New file, from GNU gettext.
+	* wait-process.c: New file, from GNU gettext.
+
 2003-10-19  Jim Meyering  <jim@meyering.net>
 
 	* vasnprintf.c (vasnprintf): Work around losing snprintf on HPUX 10.20.
