@@ -1,3 +1,7 @@
+2003-10-20  Bruno Haible  <bruno@clisp.org>
+
+	* wait-process.m4: New file.
+
 2003-10-14  Bruno Haible  <bruno@clisp.org>
 
 	* sig_atomic_t: New file, from GNU gettext.
